--- a/app/src/main/res/navigation/nav_shopping_cart.xml
+++ b/app/src/main/res/navigation/nav_shopping_cart.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/allMoviesFragment"
-        android:name="com.lupesoft.mvppattern.presenter.fragments.AllMoviesFragment"
+        android:name="com.lupesoft.mvppattern.movie.controler.fragments.AllMoviesFragment"
         android:label="@string/all_movies">
         <action
             android:id="@+id/action_allMoviesFragment_to_aboutOfMovieFragment"
@@ -14,11 +14,11 @@
     </fragment>
     <fragment
         android:id="@+id/aboutOfMovieFragment"
-        android:name="com.lupesoft.mvppattern.presenter.fragments.AboutOfMovieFragment"
+        android:name="com.lupesoft.mvppattern.movie.controler.fragments.AboutOfMovieFragment"
         android:label="AboutOfMovieFragment" />
     <fragment
         android:id="@+id/shoppingCartFragment"
-        android:name="com.lupesoft.mvppattern.presenter.fragments.ShoppingCartFragment"
+        android:name="com.lupesoft.mvppattern.cart.controler.fragments.ShoppingCartFragment"
         android:label="@string/shopping_car">
         <action
             android:id="@+id/action_shoppingCartFragment_to_aboutOfMovieFragment"
